# django-object-detail

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTRUCTIONS-README.md  INSTRUCTIONS-TEMPLATES.md  INSTRUCTIONS.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml  taskfile.yaml
.github/workflows/: docs.yml  publish.yml  tests.yml
django_object_detail/: __init__.py  apps.py  conf.py  config.py  resolvers.py  views.py
django_object_detail/templates/django_object_detail/: object_detail.html  property.html
django_object_detail/templates/django_object_detail/layouts/accordion/: group.html  object_detail.html  property.html
django_object_detail/templates/django_object_detail/layouts/card-rows/: group.html  property.html
django_object_detail/templates/django_object_detail/layouts/list-group-3col/: group.html  property.html
django_object_detail/templates/django_object_detail/layouts/split-card/: group.html  property.html
django_object_detail/templates/django_object_detail/layouts/striped-rows/: group.html  property.html
django_object_detail/templates/django_object_detail/layouts/table-inline/: group.html  property.html
django_object_detail/templates/django_object_detail/layouts/tabs-vertical/: group.html  object_detail.html  property.html
django_object_detail/templates/django_object_detail/types/: boolean.html  date.html  datetime.html  manytomany.html  text.html
django_object_detail/templates/django_object_detail/types/default/: badge.html  boolean.html  foreignkey.html  text.html  timestamp.html
django_object_detail/templatetags/: object_detail.py
docs/: .pages  index.md
docs/getting_started/: .pages  badges.md  configuration.md  example.md  layout_packs.md  links.md
docs/reference/: .pages  field_types.md  settings.md
example/: taskfile.yaml
example/bookshop/: settings.py  wsgi.py
example/catalog/: models.py  urls.py  views.py
example/catalog/fixtures/: catalog.json
example/catalog/migrations/: 0001_initial.py
example/catalog/templates/catalog/: author_detail.html  author_list.html  base.html  book_detail.html  book_list.html  home.html  publisher_detail.html  publisher_list.html  star_rating.html
instructions/: badges.md  icons-libraries.md  initial.md  mkdocs.md  settings.md
templates/: object-detail-drafts-1.html  object-detail-drafts-2.html
tests/: conftest.py  models.py  test_conf.py  test_config.py  test_icons.py  test_layout_packs.py  test_resolvers.py  test_templatetags.py  test_views.py  urls.py
tests/templates/: test_custom_value.html
