[project]
name = "django-object-detail"
version = "0.1.4"
description = "Library to show Django object properties in groups with customizable templates with focus on bootstrap5"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/jacob-consulting/django-object-detail"
Documentation = "https://django-object-detail.readthedocs.io/"
Repository = "https://github.com/jacob-consulting/django-object-detail"
Issues = "https://github.com/jacob-consulting/django-object-detail/issues"
Changelog = "https://github.com/jacob-consulting/django-object-detail/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-django",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-get-deps>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["django_object_detail*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.1.4"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "django_object_detail/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
